# clickdc

./: LICENSE  README.md  pyproject.toml  requirements-test.txt  unit_tests.sh
.github/workflows/: main.yml
src/: clickdc.py
tests/: test.py  test_typing.py  testlib.py
typing_tests/: default_list_is_not_tuple.py  default_tuple_is_not_list.py  flag_is_bool.py
